# ukbppp_dl

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  download_pQTL_study.py  pyproject.toml  requirements-dev.txt  requirements.txt  test-log.json
doc/: conf.py  index.rst  ukbppp_dl.common.download_from_synapse.rst  ukbppp_dl.common.rst  ukbppp_dl.pgwas.keep_significant_qtls_from_region.rst  ukbppp_dl.pgwas.list_tar_files_in_region_folder.rst  ukbppp_dl.pgwas.rst  ukbppp_dl.rst
doc/_templates/: main_functionalities.rst
scripts/: download_significant_qtls.py
ukbppp_dl/: common.py  pgwas.py  pqtls.py
ukbppp_dl/test/: test_common.py  test_pgwas.py  test_pqtls.py
