[project]
name = "ukbppp-dl"
version = "0.1.0"
description = "Package for easy and efficient download of significant pQTL data"
readme = "README.md"
authors = [
    {name = "Natacha Galmiche", email = "natacha.galmiche@uib.no"}
]
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["UK Biobank", "UKB-PPP", "pGWAS", "pQTL", "Synapse"]




requires-python = ">=3.14"



dependencies = [
    "polars>=1.40.1",
    "synapseclient>=4.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
