[project]
name = "ukbppp-dl"
version = "0.1.0"
description = "Package for easy and efficient download of significant pQTL data"
readme = "README.md"
authors = [
    {name = "Natacha Galmiche", email = "natacha.galmiche@uib.no"}
]
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["UK Biobank", "UKB-PPP", "pGWAS", "pQTL", "Synapse"]

classifiers = [
    "Programming Language :: Python :: 3",

    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


requires-python = ">=3.14"



dependencies = [
    "polars>=1.40.1",
    "synapseclient>=4.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]


# -------------------------------------------------------
#  ------------------ UV configuration ------------------
# -------------------------------------------------------


[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ukbppp_dl"
module-root = ""