[project]
name = "ukbppp-dl"
version = "0.1.1"
description = "Package for easy, robust and efficient download of significant pQTL data from UKB PPP"
readme = "README.md"
authors = [
    {name = "Natacha Galmiche", email = "natacha.galmiche@uib.no"}
]
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["UK Biobank", "UKB-PPP", "pGWAS", "pQTL", "Synapse"]

classifiers = [
    "Programming Language :: Python :: 3",

    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


requires-python = ">=3.14"



dependencies = [
    "polars>=1.40.1",
    "synapseclient>=4.12.0",
]

[dependency-groups]
dev = [
    "m2r==0.3.1",
    "docutils==0.20.1",
    # "myst-parser>=5.0.0",
    "pytest>=9.0.3",
    "sphinx==7.4.7",
    "sphinx-rtd-theme==3.1.0",
]


# -------------------------------------------------------
#  ------------------ UV configuration ------------------
# -------------------------------------------------------


[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ukbppp_dl"
module-root = ""
